# slack-mcp

./: pyproject.toml
